Applets and Swings

--- a/Java/Haldwani-SujataMa'am/_06_AppletsAndSwings/.vscode/settings.json
+++ b/Java/Haldwani-SujataMa'am/_06_AppletsAndSwings/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
+        "Swing",
         "GraphicsProgramming",
-        "Swing"
+        "AWT_Controls/LayoutManagers"
     ]
 }
