--- a/TBC 601 Computer Graphics/PracticalsVScode/.vscode/settings.json
+++ b/TBC 601 Computer Graphics/PracticalsVScode/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.embeddedhtml": "html",
         "*.cpp": "cpp",
         "*.rmd": "markdown",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "iostream": "cpp"
     }
 }
